# osqp-recursive-ldl

./: CMakeLists.txt  README.md
configure/cmake/download/: qdldl.txt.in
docs/get_started/: sources.rst
include/: CMakeLists.txt  cs_addon.h  glob_opts.h  recursive_ldl.h
lin_sys/direct/qdldl/: .gitignore  qdldl_interface.c  qdldl_interface.h
src/: CMakeLists.txt  cs_addon.c  recursive_ldl.c
tests/: CMakeLists.txt  main.cpp
